<resources>
    <string name="app_name">IBM Instana Demo</string>
    <string name="instana_android_demo_app_title_text">Instana Android Demo App</string>
    <string name="key_hint_text">Key</string>
    <string name="reporting_url_hint_text">Reporting Url</string>
    <string name="save_and_restart_button_text"><![CDATA[Save & Restart]]></string>
    <string name="methods_to_generate_exceptions_title">Methods to generate Exceptions:</string>
    <string name="arithmetic_exception_btn_text">Arithmetic Exception</string>
    <string name="custom_throw_messages_btn_text">Custom Throw Messages</string>
    <string name="null_pointer_exception_btn_text">Null pointer Exception</string>
    <string name="anr_btn_text">ANR</string>
    <string name="custom_events_title_text">Custom Event Details: \n\nYou can provide custom events to track, meta data will be in key value pair</string>
    <string name="custom_event_name_hint">Custom Event Name</string>
    <string name="duration_in_seconds_hint">Duration in seconds</string>
    <string name="backend_tracing_id_hint">Backend Tracing ID</string>
    <string name="provide_meta_details_title">Provide Meta Details:</string>
    <string name="meta_key_hint">Meta Key</string>
    <string name="meta_value_hint">Meta Value</string>
    <string name="create_event_btn_text">Create Event</string>
    <string name="create_user_data_btn_text">Create User Data</string>
    <string name="update_configuration_btn_text">Update Configuration</string>
    <string name="make_network_call_btn_text">Make Network Call</string>
    <string name="add_views_btn_text">Add Views</string>
    <string name="create_custom_events_btn_text">Create Custom Events</string>
    <string name="create_crash_btn_text">Create Crash</string>
    <string name="create_test_logs_btn_text">Create Test Logs</string>
    <string name="view_screen_first_title_text">First Screen Name:</string>
    <string name="screen_name_hint">Screen Name</string>
    <string name="save_btn_text">Save</string>
    <string name="next_screen_btn_text">Next Screen</string>
    <string name="choose_netwrk_client_title">Choose the N/W client</string>
    <string name="retrofit_radio_btn_text">Retrofit</string>
    <string name="httpurl_radio_btn_text">HttpURL</string>
    <string name="okhttp3_radio_btn_text">OkHttp3</string>
    <string name="create_network_call_btn_text">Create Network Call</string>
    <string name="create_custom_url_call_btn_text">Create Custom Url Call</string>
    <string name="profile_details_screen_title">Profile Details</string>
    <string name="user_name_hint">User Name</string>
    <string name="user_id_hint">User Id</string>
    <string name="user_email_hint">User Email</string>
    <string name="save_user_details_btn_text">Save User Details</string>
    <string name="log_screen_title">Select the level of log you need</string>
    <string name="info_radio_btn_text">INFO</string>
    <string name="debug_radio_btn_text">DEBUG</string>
    <string name="warn_radio_btn_text">WARN</string>
    <string name="error_radio_btn_text">ERROR</string>
    <string name="verbose_radio_btn_text">VERBOSE</string>
    <string name="log_tag_message_title">Provide your TAG and Message for Log</string>
    <string name="log_tag_hint">Log Tag</string>
    <string name="log_message_hint">Log Message</string>
    <string name="log_error_throwable_hint">Log Error Throwable</string>
    <string name="provide_error_log_optional_title">Provide Error Log (Optional)</string>
    <string name="any_changes_here_require_app_restart_page_info">Any changes here require app restart</string>
    <string name="update_key_url_title">Update Key/Url:</string>
    <string name="update_suspension_type_title">Update Suspension Type:</string>
    <string name="low_battery_or_cellular_connection_radio_btn_text">LOW_BATTERY_OR_CELLULAR_CONNECTION</string>
    <string name="never_radio_btn_text">NEVER</string>
    <string name="low_battery_radio_btn_text">LOW_BATTERY</string>
    <string name="cellular_connection_radio_btn_text">CELLULAR_CONNECTION</string>
    <string name="collection_enabled_title">Collection enabled:</string>
    <string name="collection_enable_switch_text">Turn it on to enable collection of data</string>
    <string name="enable_crash_reporting_title">Enable Crash Reporting:</string>
    <string name="crash_reportingcrash_report_enable_switch_text">Turn it on to enable crash reporting</string>
    <string name="next_screen_inline_code_string">Next Screen</string>
    <string name="second_screen_name_inline_code_string">"Second Screen Name: "</string>
</resources>