<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/level_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:padding="10dp"
            android:text="@string/log_screen_title"
            android:textColor="@color/base_text_color"
            app:layout_constraintTop_toTopOf="parent"
             />

        <RadioGroup
            android:id="@+id/levelRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/level_title">

            <RadioButton
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_radio_btn_text" />

            <RadioButton
                android:id="@+id/debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debug_radio_btn_text" />

            <RadioButton
                android:id="@+id/warn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warn_radio_btn_text" />

            <RadioButton
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_radio_btn_text" />

            <RadioButton
                android:id="@+id/verbose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verbose_radio_btn_text" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/log_tag_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:padding="10dp"
            android:text="@string/log_tag_message_title"
            android:textColor="@color/base_text_color"
            app:layout_constraintTop_toBottomOf="@+id/levelRadioGroup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_tag_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/log_tag_hint"
            app:layout_constraintTop_toBottomOf="@+id/log_tag_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:textColor="@color/button_base_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_message_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/log_message_hint"
            app:layout_constraintTop_toBottomOf="@+id/log_tag_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:textColor="@color/button_base_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/log_error_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:padding="10dp"
            android:text="@string/provide_error_log_optional_title"
            android:textColor="@color/base_text_color"
            app:layout_constraintTop_toBottomOf="@+id/log_message_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_error_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/log_error_throwable_hint"
            app:layout_constraintTop_toBottomOf="@+id/log_error_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:textColor="@color/button_base_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/crate_log_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="40dp"
            android:backgroundTint="@color/button_base_color"
            android:text="@string/create_user_data_btn_text"
            android:textColor="@color/button_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/log_error_layout"
            app:layout_constraintVertical_chainStyle="spread_inside" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>