<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/methods_to_generate_exceptions_title"
        android:textColor="@color/base_text_color"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/arithmetic_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="30dp"
        android:backgroundTint="@color/button_base_color"
        android:text="@string/arithmetic_exception_btn_text"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="50dp" />

    <Button
        android:id="@+id/custom_throw_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/button_base_color"
        android:text="@string/custom_throw_messages_btn_text"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@+id/arithmetic_exception"
        tools:layout_editor_absoluteX="50dp" />

    <Button
        android:id="@+id/null_pointer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/button_base_color"
        android:text="@string/null_pointer_exception_btn_text"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@+id/custom_throw_messages"
        tools:layout_editor_absoluteX="50dp" />

    <Button
        android:id="@+id/anr_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/button_base_color"
        android:text="@string/anr_btn_text"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@+id/null_pointer"
        tools:layout_editor_absoluteX="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>