<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/base_text_color"
        android:text="@string/choose_netwrk_client_title"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/title"
        >

        <RadioButton
            android:id="@+id/retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_radio_btn_text" />

        <RadioButton
            android:id="@+id/http_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/httpurl_radio_btn_text"
             />

        <RadioButton
            android:id="@+id/ok_http"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okhttp3_radio_btn_text" />

    </RadioGroup>

    <Button
        android:id="@+id/create_network_call_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/button_base_color"
        android:text="@string/create_network_call_btn_text"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
         />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/create_network_call_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:src="@drawable/info_icon"
        app:layout_constraintBottom_toBottomOf="@+id/create_network_call_btn"
        app:layout_constraintStart_toEndOf="@+id/create_network_call_btn"
        app:layout_constraintTop_toTopOf="@+id/create_network_call_btn" />

    <Button
        android:id="@+id/create_custom_network_call_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button_base_color"
        android:text="@string/create_custom_url_call_btn_text"
        android:textColor="@color/button_text_color"
        app:layout_constraintTop_toBottomOf="@+id/create_network_call_btn"
        tools:layout_editor_absoluteX="50dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/create_custom_call_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:src="@drawable/info_icon"
        app:layout_constraintBottom_toBottomOf="@+id/create_custom_network_call_btn"
        app:layout_constraintStart_toEndOf="@+id/create_custom_network_call_btn"
        app:layout_constraintTop_toTopOf="@+id/create_custom_network_call_btn" />



</androidx.constraintlayout.widget.ConstraintLayout>