<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/custom_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/custom_events_title_text"
            android:textColor="@color/base_text_color"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/custom_event_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/custom_event_name_hint"
            app:layout_constraintTop_toBottomOf="@+id/custom_event_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/custom_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/button_base_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/duration_in_seconds_hint"
            app:layout_constraintTop_toBottomOf="@+id/custom_event_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/button_base_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/backend_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/backend_tracing_id_hint"
            app:layout_constraintTop_toBottomOf="@+id/duration_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/backend_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:textColor="@color/button_base_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/meta_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:padding="10dp"
            android:text="@string/provide_meta_details_title"
            android:textColor="@color/base_text_color"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/backend_id_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meta_key_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/meta_key_hint"
            app:layout_constraintTop_toBottomOf="@+id/meta_event_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meta_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/button_base_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meta_value_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/meta_value_hint"
            app:layout_constraintTop_toBottomOf="@+id/meta_key_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meta_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/button_base_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_event_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/button_base_color"
            android:text="@string/create_event_btn_text"
            android:textColor="@color/button_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meta_value_layout"
            app:layout_constraintVertical_chainStyle="spread_inside" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>