<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_screen_first_title_text"
        android:textColor="@color/base_text_color"
        android:textSize="13sp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/screen_name_provided"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/base_text_color"
        android:textSize="18sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/screen_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:hint="@string/screen_name_hint"
        app:boxStrokeColor="@color/base_text_color"
        app:layout_constraintTop_toBottomOf="@+id/screen_name_provided">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/screen_name_user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/base_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_screen_name_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/button_base_color"
        android:text="@string/save_btn_text"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_name_layout"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/screen_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/button_base_color"
        android:text="@string/next_screen_btn_text"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_screen_name_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>